kubernetes/production.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quinnjr-tech-production
  namespace: default
  labels:
    app: quinnjr-tech-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: quinnjr-tech-app
  template:
    metadata:
      labels:
        app: quinnjr-tech-app
    spec:
      containers:
        - name: quinnjr-tech-app
          image: ghcr.io/quinnjr/quinnjr.tech:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 4200
          resources:
            requests:
              cpu: "500m"
              memory: "512M"
            limits:
              cpu: "800m"
              memory: "1G"
      imagePullSecrets:
        - name: dockerconfigjson-github-com
---
apiVersion: v1
kind: Service
metadata:
  name: quinnjr-tech-service
  namespace: default
  labels:
    app: quinnjr-tech-app
spec:
  selector:
    app: quinnjr-tech-app
  type: NodePort
  ports:
    - port: 4200
      targetPort: 4200
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quinnjr-tech-ingress
  labels:
    name: quinnjr-tech-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx-ingress
  rules:
    - host: quinnjr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quinnjr-tech-service
                port:
                  number: 4200
